force-app/main/default/objects/Shipping_Address__c/Shipping_Address__c.object-meta.xml
<CustomObject>
    <description
  >Stores customer shipping addresses with address validation and a default address flag. Used in ENOS e-commerce platform for checkout and order fulfillment processes.</description>
    <label>Shipping Address</label>
    <nameField>
        <label>Address Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>