force-app/main/default/objects/Shipping_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipping Addresses</relationshipLabel>
    <relationshipName>Shipping_Addresses</relationshipName>

    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>