force-app/main/default/objects/Shipping_Address__c/fields/Address_Label__c.field-meta.xml
<CustomField>
    <fullName>Address_Label__c</fullName>
    <label>Address Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>